src/test/ui/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:10:9
   |
LL |         ().a()
   |         ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
